# python_shakki-tira_projekti_hy-

./: .coveragerc  .pylintrc  README.md  pyproject.toml  tasks.py
dokumentaatio/: kaytto-ohjeet.md  kirjanpito.md  testaus.md  toteutusdokumentti.md  vaatimusmaarittely.md
dokumentaatio/viikkorep/: vko_1.md  vko_2.md  vko_3.md  vko_4.md  vko_5  vko_5.md  vko_6.md
miinaharava_temp/: minesweeper.py
nsrc/: engine.py  false_engine.py  minmax_bot_model.py  player.py  rand_bot_model.py  stress_tests.py  tempCodeRunnerFile.py  tests.py  tunnelvision_bot_model.py
nsrc/tests/: chess_game_test.py  correctness_test.py  minmax_simple_test.py
nsrc/ui/: input.py  visuals.py
